[package]
name = "proto_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.28.1", features = ["sync", "net", "rt-multi-thread", "macros"] }
tokio-stream = {version = "0.1.14", features = ["sync"]}
http-body-util = "0.1.0-rc.3"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simd-json = { version = "0.12.0", features = ["serde_impl"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
clap = "4.3.0"
toml = "0.7.6"
rand = "0.8.5"
tokio-tungstenite = {  version = "0.16.0", features = ["native-tls"] }
futures-util = "0.3.30"
chrono = "0.4.34"
env_logger = "0.11.2"
log = "0.4.20"
lazy_static = "1.4.0"